@@ -944,8 +944,10 @@ irc_cmd_recv_privmsg (t_irc_server *server, char *host, char *arguments)
                     irc_display_prefix (ptr_channel->buffer, PREFIX_ACTION_ME);
                     if (strstr (pos, server->nick))
                     {
-                        gui_printf_color (ptr_channel->buffer,
-                                          COLOR_WIN_CHAT_HIGHLIGHT, "%s", host);
+                        gui_printf_color_type (ptr_channel->buffer,
+                                               MSG_TYPE_MSG,
+                                               COLOR_WIN_CHAT_HIGHLIGHT,
+                                               "%s", host);
                         if ( (cfg_look_infobar_delay_highlight > 0)
                             && (ptr_channel->buffer != gui_current_window->buffer) )
                             gui_infobar_printf (cfg_look_infobar_delay_highlight,
@@ -955,8 +957,9 @@ irc_cmd_recv_privmsg (t_irc_server *server, char *host, char *arguments)
                                                 host, pos);
                     }
                     else
-                        gui_printf_color (ptr_channel->buffer,
-                                          COLOR_WIN_CHAT_NICK, "%s", host);
+                        gui_printf_color_type (ptr_channel->buffer,
+                                               MSG_TYPE_MSG,
+                                               COLOR_WIN_CHAT_NICK, "%s", host);
                     gui_printf_color (ptr_channel->buffer,
                                       COLOR_WIN_CHAT, " %s\n", pos);
                 }
